--- a/public/_partials/blog/header.jade
+++ b/public/_partials/blog/header.jade
@@ -5,9 +5,9 @@ header( class="article-header #{hero}")
   if subtitle
     h2.animated.fadeIn= subtitle
 
-  for bio, name in authors
+  for person, name in team
     if author == name
-      p.author <img src="#{bio.avatar}" align="left" /> by #{bio.name}
+      p.author <img src="#{person.avatar}" align="left" /> by #{person.name}
 
 
   .cta-buttons.animated.fadeIn
