--- a/public/about/index.jade
+++ b/public/about/index.jade
@@ -1,8 +1,8 @@
-article.article.l-centered-content.l-margin-top-40
+article.l-centered-content.l-margin-top-40
 
   for person in team
 
-    section.l-negative-space.background-cloud
+    section.l-negative-space.background-cloud.l-margin-bottom-60
       h3 #{person.name}
       img(src="#{person.avatar}")
       p #{person.bio}
