mobile style updates

--- a/public/_partials/blog/meta.jade
+++ b/public/_partials/blog/meta.jade
@@ -1,4 +1,4 @@
-ul.article-meta.l-right.background-cloud
+ul.article-meta.background-cloud
   li <strong>Reading Time</strong> - #{meta.length}
   li <strong>Topics</strong> - #{meta.topics}
   li <strong>Skill Level</strong> - #{meta.skill}
