--- a/public/_partials/blog/slug.jade
+++ b/public/_partials/blog/slug.jade
@@ -1,10 +1,10 @@
 if slug != "index"
-	.card
+	.slug
 		header
 			h2 <a href="#{slug}.html">#{article.title}</a>
 			h3 #{article.author}
 
-		.card-body
+		.slug-body
 			p #{article.description}
 			a(href="#{slug}.html") Read Article...
 
