--- a/public/blog/_layout.jade
+++ b/public/blog/_layout.jade
@@ -2,7 +2,7 @@ doctype
 html
   != partial('../_partials/head')
 
-  body(class="background-cloud l-padding-top-160")
+  body(class="background-cloud")
     != partial('../_partials/nav')
 
     article.article.l-centered-content
