--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -17,7 +17,7 @@
 
 @import "module/hero";
 @import "module/form";
-@import "module/cards";
+@import "module/slug";
 @import "module/footer";
 @import "module/nav";
 @import "module/article";
