--- a/public/_partials/nav.jade
+++ b/public/_partials/nav.jade
@@ -1,4 +1,4 @@
-nav(class="top-nav l-layer-5 l-pinned-top #{navSize}")
+nav(class="top-nav l-layer-5 l-pinned-top #{size}")
   div(class="background-mantle top-nav-stripe")
 
   .l-centered-content
