--- a/public/demo/_layout.jade
+++ b/public/demo/_layout.jade
@@ -4,7 +4,7 @@ html
 
   body
     div asdf
-    != partial('../_partials/nav-micro')
+    != partial('../_partials/nav', {size: 'is-small'})
 
     != yield
 
