Remove inline style and created an SVG Sass module

--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -22,4 +22,5 @@
 @import "module/nav";
 @import "module/article";
 @import "module/prettify";
+@import "module/svg";
 @import "module/buttons/buttons";
