First stab at list card view for index page

--- a/public/blog/index.jade
+++ b/public/blog/index.jade
@@ -1,6 +1,15 @@
 
 div.l-centered-content
-  for article, slug in public.blog._data
-    if slug != "index"
-      a(href="/blog/#{ slug }.html")
-        h2= article.title
+	.cards
+		each article, slug in public.blog._data
+			if slug != "index"
+				.card
+					.card-header
+						a(href="/blog/#{ slug }.html")
+							h2= article.title
+
+					.card-body
+						p= article.description
+
+					.card-footer
+						p.author <img src="#{article.author.avatar}" align="left" /> by #{article.author.name}
