--- a/resources/scss/module/_cards.scss
+++ b/resources/scss/module/_cards.scss
@@ -9,6 +9,11 @@
   @extend %bfc;;
 }
 
+
+
+
+
+
 .card {
   position: relative;
   float: left;
@@ -21,6 +26,17 @@
   box-sizing: border-box;
   box-shadow: 0px 0px 2px rgba(0,0,0,.1);
   border-radius: 2px;
+
+  @media handheld and (max-width: $standard-breakpoint),
+  screen and (max-device-width: $standard-breakpoint),
+  screen and (max-width: $standard-breakpoint) {
+    width: auto;
+  }
+
+  // LARGE SCREENS
+  @media screen and (min-width: $large-breakpoint) {
+    width: 460px;
+  }
 }
 
 .card-header {
