Updated What Is SVG article to use Doug's timeline

--- a/resources/scss/module/_svg.scss
+++ b/resources/scss/module/_svg.scss
@@ -17,3 +17,39 @@
 	top: 0;
 	left: 0;
 }
+
+
+
+
+
+//Doug Schepers timeline slide tweaked
+.svg-container.rise-and-fall {
+	padding-bottom: 46.15384615%;
+	.svg {
+		.heading, .subheading, .bullet, .item {
+		  font-family: inherit;
+		}
+		.timepoint,
+		.number-using {
+			fill: gold;
+		}
+		.number-using {
+		  font-size: .875em;
+		}
+		.timepoint {
+			font-size: .5625em;
+		  > tspan {
+		  	fill: white;
+		  }
+		}
+		.axis-labels {
+			fill: white;
+			font-size: .75em;
+		}
+		.title, .heading, h1, h2, h3 {
+		  fill: gold;
+		  font-size: 2em;
+		  font-weight: bold;
+		}
+	}
+}
