--- a/public/_partials/scripts.jade
+++ b/public/_partials/scripts.jade
@@ -1,5 +1,5 @@
 //--------------------------/
-//-- VENDER SCRIPTS --------/
+//-- VENDOR SCRIPTS --------/
 //--------------------------/
 
 script(src="/js/libs/jquery.js")
@@ -8,20 +8,7 @@ script(src="/js/libs/jquery.validate.js")
 script(src="/js/libs/underscore.js")
 script(src="/js/libs/moment.js")
 script(src="/js/libs/clamp.js")
-
-
-
-
-//--------------------------/
-//-- THIRD PARTY SCRIPTS ---/
-//--------------------------/
-
-// ADD THIS
-script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async")
-script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async")
-
-// PRETTIFY CODE
-script(src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js")
+script(src="/js/libs/prettify.js")
 
 
 //--------------------------/
@@ -30,3 +17,21 @@ script(src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js")
 
 script(src="/js/site.js")
 
+
+//--------------------------/
+//-- SOCIAL & ANALTYICS ----/
+//--------------------------/
+
+// ADD THIS
+script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async")
+script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async")
+
+// GOOGLE ANALYTICS
+script.
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41954774-3', 'auto');
+  ga('send', 'pageview');
