--- a/resources/scss/_options.scss
+++ b/resources/scss/_options.scss
@@ -19,6 +19,7 @@ $gray: #a9adb1;
 $light: #e8edf2;
 $alice: #229ffd;
 $steel: #455A64;
+$tin: lighten($steel, 15%);
 $midnight: #2c3e50;
 $cloud: #f0f5f9;
 $sea: #16a085;
