--- a/public/_partials/nav.jade
+++ b/public/_partials/nav.jade
@@ -12,5 +12,7 @@ nav(class="top-nav l-layer-5 l-pinned-top #{size}")
         li <a href="#{article}">Return to Article <i class="fa fa-angle-double-right"></i></a>
 
       li
+        a(href="/about") About
+      li
         a(href="/blog") Blog
 
