--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -21,6 +21,7 @@
 @import "module/slug";
 @import "module/footer";
 @import "module/nav";
+@import "module/author";
 @import "module/article";
 @import "module/prettify";
 @import "module/svg";
