--- a/public/_partials/blog/card.jade
+++ b/public/_partials/blog/card.jade
@@ -1,7 +1,7 @@
 avatar = team[article.author]['avatar']
 name = team[article.author]['name']
 
-.card
+.card.l-margin-bottom-40
 	.card-header
 		a(href="/blog/#{ slug }.html")
 			h2= article.title
