--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -22,8 +22,10 @@
 @import "module/footer";
 @import "module/nav";
 @import "module/author";
+@import "module/bio";
 @import "module/article";
 @import "module/prettify";
 @import "module/svg";
 @import "module/cards";
 @import "module/buttons/buttons";
+@import "module/shadow";
