Fix bad cdn for prettify and rebuilt production

--- a/public/buttons/builder/_layout.jade
+++ b/public/buttons/builder/_layout.jade
@@ -31,7 +31,7 @@ html
 
     != yield
 
-    script(src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js")
     script(type="text/javascript" src="/js/libs/jquery.js")
     script(type="text/javascript" src="/js/libs/jquery.validate.js")
     script(type="text/javascript" src="/js/libs/jquery.scrollTo.js")
